wz：小程序锁死文理科切换。

--- a/pages/person/information/information.wxml
+++ b/pages/person/information/information.wxml
@@ -25,8 +25,8 @@
             <view class="weui-label">考试类型</view>
         </view>
         <view class="weui-cell__bd">
-            <picker bindchange="bindPickerChange" value="{{majortypeIndex}}" range="{{majortypeObjs}}" range-key='NAME' id="MAJORTYPE" name="MAJORTYPE">
-              <view class='picker'>{{majortypeObjs[majortypeIndex].NAME}}</view>
+            <picker bindchange="bindPickerChange" value="{{majortypeIndex}}" range="{{majortypeObjs}}" range-key='NAME' id="MAJORTYPE" name="MAJORTYPE" disabled="true">
+               <view class='picker'>{{majortypeObjs[majortypeIndex].NAME}}</view> 
             </picker>
         </view>
     </view>
