wz：小程序广告位样式修改。

--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -37,7 +37,7 @@
 <!-- <block wx:for="{{schools}}" wx:key="SCHOOL_ID" wx:for-item="school">  -->
 <block wx:for="{{sc}}" wx:key="SCHOOL_ID" wx:for-item="sc"> 
   <!-- <view class="flex-wrps1" bindtap='teacher' data-id="{{school.SCHOOL_ID}}" > -->
-  <view class="flex-wrps1" bindtap='teacher' data-id="{{sc.SCHOOL_ID}}" >
+  <view class="flex-wrps1" bindtap='teacher' data-id="{{sc.SCHOOL_ID}}">
     <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
       <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
         <!-- <image class="weui-media-box__thumb" src="{{school.HEADURL}}" /> -->
@@ -62,9 +62,9 @@
 </block>
 <!--热门院校广告位结束  -->
 
+<view class='jiange'></view>
 
-
-<view class="cue"><text>共找到<text style='color:rgb(90,180,170)'>{{num}}</text>所院校</text></view> 
+ <!-- <view class="cue"><text>共找到<text style='color:rgb(90,180,170)'>{{num}}</text>所院校</text></view>   -->
 <view class="page1" hidden="{{hidden}}" bindtap="close_ch"></view>
 <scroll-view scroll-y class="page" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" style="width:{{width}}%" >
 <view class="page-body">
@@ -138,7 +138,7 @@
 <!-- 院校列表 -->
 <block wx:for="{{schools}}" wx:key="SCHOOL_ID" wx:for-item="school"> 
   <view class="flex-wrps" bindtap='teacher' data-id="{{school.SCHOOL_ID}}" >
-    <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+    <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active" style='border-bottom: 1px solid #DCDCDC;'>
       <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
         <image class="weui-media-box__thumb" src="{{school.HEADURL}}" />
       </view>
