--- a/pages/consult/consult.wxss
+++ b/pages/consult/consult.wxss
@@ -22,6 +22,12 @@ page{
   color: #E84C33;
   font-weight: 700;
 }
+.jiange{
+  width: 100%;
+  height: 10px;
+  background: #DCDCDC;
+  margin-top: 15px;
+}
 .cue{
   margin:20rpx 4% 0 4%;
   width:92%;
