--- a/pages/school/school.wxss
+++ b/pages/school/school.wxss
@@ -14,6 +14,9 @@ page{
   align-items: center;
   justify-content:space-between;
 }
+.sousuo:hover{
+  color: red;
+}
 .cue{
   margin:20rpx 4% 0 4%;
   width:92%;
