wz：小程序 广告位 样式修改。

--- a/pages/consult/consult.wxss
+++ b/pages/consult/consult.wxss
@@ -14,6 +14,10 @@ page{
   align-items: center;
   justify-content:space-between;
 }
+#view1{
+  width: 35px;
+  height: 35px;
+}
 .sousuo:hover{
   color: red;
 }
@@ -174,12 +178,19 @@ button[type="primary"] {
   flex-direction: column;
   margin-top:30rpx;
 }
+.mb-biankuang{
+  margin-top: 10px;
+  border: 2px solid #E84C33;
+  border-radius: 15px;
+  border-bottom: none;
+}
 .flex-wrps1{
   display: flex;
   flex-direction: column;
-  margin-top:30rpx;
-  border: 2px solid #E84C33;
+  border-bottom: 1px solid #E84C33;
   border-radius: 15px;
+  width: 100%;
+  height: 67px;
 }
 .weui-media-box__desc{
   margin-top:15rpx;
@@ -264,6 +275,7 @@ button[type="primary"] {
   width:40rpx;
   height:40rpx;
   margin-left:10rpx;
+  padding-top: 10px;
 }
 .icon-subjecttype{
   width:80rpx;
