--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -14,10 +14,10 @@
             </view>
             <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
                 <icon class="weui-icon-search" type="search" size="14"></icon>
-                 <view class="weui-search-bar__text">搜索</view> 
+                <view class="weui-search-bar__text">搜索</view>
             </label>
         </view>
-         <view class="weui-search-bar__cancel-btn sousuo" hidden="{{!inputShowed}}" bindtap="setSearchStorage">搜索</view> 
+        <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="setSearchStorage">搜索</view>
     </view>  
 </view>
 <view class="header">
@@ -35,12 +35,11 @@
 <view class="remen"><text>热门院校</text></view>
 <!-- 院校列表 -->
 <!-- <block wx:for="{{schools}}" wx:key="SCHOOL_ID" wx:for-item="school">  -->
-<view class='mb-biankuang'>
 <block wx:for="{{sc}}" wx:key="SCHOOL_ID" wx:for-item="sc"> 
   <!-- <view class="flex-wrps1" bindtap='teacher' data-id="{{school.SCHOOL_ID}}" > -->
   <view class="flex-wrps1" bindtap='teacher' data-id="{{sc.SCHOOL_ID}}">
     <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-      <view id="view1" class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+      <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
         <!-- <image class="weui-media-box__thumb" src="{{school.HEADURL}}" /> -->
         <image class="weui-media-box__thumb" src="{{sc.HEADURL}}" />
       </view>
@@ -49,11 +48,11 @@
           <!-- <text>{{school.NAME}}</text> -->
           <text>{{sc.NAME}}</text>
           <!-- <image wx:for="{{school.properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image> -->
-            <image wx:for="{{sc.properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image> 
+           <image wx:for="{{sc.properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image>
         </view>
-        <!-- <view class="weui-media-box__desc">
+        <view class="weui-media-box__desc">
           <text>入驻人数：{{sc.TEACOUNT}}人</text><text>地区：{{sc.PROVINCE_VALUE}}</text>
-        </view> -->
+        </view>
         <view class="weui-media-box__desc">
           <image wx:for="{{sc.subjecttypes}}" wx:key="" class='icon-subjecttype' src="/images/icon/{{item.DIC_ID}}.png"></image>
         </view>  
@@ -61,7 +60,6 @@
     </view>
   </view> 
 </block>
-</view>
 <!--热门院校广告位结束  -->
 
 <view class='jiange'></view>
