wz：小程序广告位样式。

--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -32,17 +32,20 @@
 </view> 
 
 <!--wz：2018-6-1 热门院校 广告位  -->
+
 <view class="remen"><text>热门院校</text></view>
 <!-- 院校列表 -->
 <!-- <block wx:for="{{schools}}" wx:key="SCHOOL_ID" wx:for-item="school">  -->
+<view class='mb-biankuang'>
 <block wx:for="{{sc}}" wx:key="SCHOOL_ID" wx:for-item="sc"> 
   <!-- <view class="flex-wrps1" bindtap='teacher' data-id="{{school.SCHOOL_ID}}" > -->
   <view class="flex-wrps1" bindtap='teacher' data-id="{{sc.SCHOOL_ID}}">
     <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-      <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+      <view id='view1' class="weui-media-box__hd weui-media-box__hd_in-appmsg">
         <!-- <image class="weui-media-box__thumb" src="{{school.HEADURL}}" /> -->
         <image class="weui-media-box__thumb" src="{{sc.HEADURL}}" />
-      </view>
+      </view> 
+
       <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
         <view>
           <!-- <text>{{school.NAME}}</text> -->
@@ -60,6 +63,7 @@
     </view>
   </view> 
 </block>
+</view>
 <!--热门院校广告位结束  -->
 
 <view class='jiange'></view>
