--- a/pages/teacher/teacher.wxml
+++ b/pages/teacher/teacher.wxml
@@ -26,7 +26,7 @@
             <view class="weui-panel__bd">
                 <view class="weui-media-box weui-media-box_text"  wx:for="{{result}}" wx:key="" hidden="{{item.checked}}">
                     <view class="weui-media-box__title weui-media-box__title_in-text">{{item.CONTENT}}</view> 
-                    <view class="weui-media-box__desc">
+                    <view class="weui-media-box__desc" style='color: #FF0000; font-size: 16px;'>
                       {{item.PRONICKNAME}}回复：{{item.PROCONTENT}}
                       
                     </view>
@@ -66,7 +66,7 @@
                 </view>
                 <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
                     <view class="weui-media-box__title">{{item.NICKNAME}} <text class='atte' >认证</text></view>
-                    <view class="weui-media-box__desc">{{item.INTRODUCTION}}</view>
+                    <view class="weui-media-box__desc" style='font-size: 16px;'>{{item.INTRODUCTION}}</view>
                     
                 </view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
