--- a/pages/person/collect/collect.wxss
+++ b/pages/person/collect/collect.wxss
@@ -5,6 +5,13 @@
   margin-left:10rpx;
   /* align-items: center; */
 }
+.b1b2{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.show{display:block;}
+.hidden{display:none;}
 .center{
   text-align: center;
 }
