--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -159,3 +159,29 @@
 .page__bd_spacing{
   margin-bottom:20rpx;
 }
+/* 2018.7.2 ldq 增加第十届高招会 */
+.ldq-meeting {
+  background-color: #008A8C;
+  padding: 10rpx 20rpx;
+}
+.ldq-meeting view {
+  display: block;
+  text-align: center;
+  color: #F7F7F7;
+  font-size: 34rpx;
+  line-height: 46rpx;
+  font-weight: 700;
+  letter-spacing: 10rpx;
+}
+.ldq-meeting .orange {
+  color: #ffb400;
+}
+.ldq-meeting .x {
+  font-weight: 400;
+  font-size: 30rpx;
+}
+.ldq-meeting image {
+  width: 50rpx;
+  height: 50rpx;
+}
+/* 2018.7.2 ldq 结束 */
