--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -33,7 +33,9 @@
             </view>
         </view>
       </view>
-
+<view wx:for="{{city}}" wx:key="{{index}}" bindtap="getCity">
+  {{item.NAME}}
+</view>
       <view class="weui-cells__title">城市信息</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_select">
@@ -41,7 +43,7 @@
                 <view class="weui-label">城市</view>
             </view>
             <view class="weui-cell__bd">
-                <picker bindchange="bindCountryChange" value="{{countryIndex}}" range="{{countries}}">
+                <picker bindchange="bindCountryChange" value="{{city}}" range="{{c}}">
                     <view class="weui-select weui-select_in-select-after">{{countries[countryIndex]}}</view>
                 </picker>
             </view>
