--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -33,9 +33,6 @@
             </view>
         </view>
       </view>
-<!-- <view wx:for="{{city}}" wx:key="{{index}}" bindtap="getCity">
-  {{item.NAME}}
-</view> -->
       <view class="weui-cells__title">城市信息</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_select" name="s">
@@ -93,7 +90,16 @@
             </view>
           </view>
         </view>
-        <!--wz：2018-6-2 学生注册添加 预估分数  -->
+        <view class="weui-cell weui-cell_select" name="s">
+            <view class="weui-cell__hd weui-cell__hd_in-select-after">
+                <view class="weui-label">考试年份</view>
+            </view>
+            <view class="weui-cell__bd">
+                <picker bindchange="selYear" value="{{index}}" range="{{year}}" range-key='val'>
+                    <view class="weui-select weui-select_in-select-after">{{thisYear.val}}</view>
+                </picker>
+            </view>
+        </view>
         <view class="weui-cell weui-cell_input">
             <view class="weui-cell__hd">
                 <view class="weui-label">预估分数</view>
