--- a/pages/person/basics/basics.wxml
+++ b/pages/person/basics/basics.wxml
@@ -1,25 +1,37 @@
 <!-- 学生修改基本信息页面 -->
 <view class="page">
+<!-- title -->
+	<view class="page__hd">
+		<view class="page__title">基本信息</view>
+		<view class="page__desc">student</view>
+	</view>
 <form bindsubmit="formSubmit">
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
+          <text>姓名</text>
+          <input type='text' name='' value='{{user_name}}'style="text-align:right" />
+      </view>
+  </view>
+	<view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell__hd"></view>
+      <view class="weui-cell__bd weui-cell_primary">
           <text>昵称</text>
-          <input type='text' name='NICKNAME' value='{{user.NICKNAME}}'style="text-align:right" />
+          <input type='text' name='' value='{{nickname}}'style="text-align:right" />
       </view>
   </view>
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
           <text>性别</text>
-          <picker bindchange="bindPickerChange" value="{{sexIndex}}" range="{{sexObjs}}" name='SEX' range-key='NAME'>
+          <picker bindchange="bindPickerChange" value="{{sexIndex}}" range="{{sexs}}" name='' range-key='NAME'>
         <view class="picker">
           {{sexObjs[sexIndex].NAME}}
         </view>
       </picker>
       </view>
   </view>
-  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" >
+  <!-- <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" >
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
           <text>出生日期</text>
@@ -27,28 +39,9 @@
       <view class="picker">{{birthday}}</view>
       </picker>
       </view>
+  </view> -->
+	<view class="weui-btn-area">
+  	<button class="weui-btn" type="primary" form-type='submit'>保存修改</button>
   </view>
-  <!-- <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/authentication/authentication'>
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>实名认证</text><text>{{user.IDCARD}}</text>
-      </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator> -->
-  <!-- <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/email/email'>
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>邮箱设置</text><text>{{user.EMAIL}}</text>
-      </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator> -->
-  <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/phone/phone'>
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>手机号设置</text><text>{{user.PHONE}}</text>
-      </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator> 
-  <button class="weui-btn" type="primary" form-type='submit'>保存修改</button>
 </form>
 </view>
